# myco-patch

./: .gitignore  LICENSE  README.en.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: philosophy.md  roadmap.md  safety.md  spore-format.md
mycopatch/: __init__.py  cli.py
mycopatch/core/: __init__.py  config.py  cost.py  ecosystem_scanner.py  explainer.py  js_ts_datetime_analyzer.py  jsonl.py  memory.py  models.py  patch_drafter.py  patch_recommender.py  paths.py  probe_generator.py  python_bug_pattern_analyzer.py  python_datetime_analyzer.py  repo_scanner.py  reporter.py  risk_mapper.py  spore_loader.py  verification.py  verifier.py
mycopatch/providers/: __init__.py  base.py  local_http.py  offline.py  openai_compatible.py  service.py
mycopatch/sandbox/: __init__.py  command_policy.py  runner.py
mycopatch/spores/: __init__.py  js-ts-timezone-boundary.yaml  python-broad-exception-swallow.yaml  python-mutable-default-argument.yaml  python-timezone-boundary.yaml
tests/: test_cli_smoke.py  test_command_policy.py  test_config.py  test_cost.py  test_ecosystem_scanner.py  test_init.py  test_js_ts_datetime_analyzer.py  test_model_providers.py  test_patch_drafter.py  test_probe_generator.py  test_python_bug_pattern_analyzer.py  test_python_datetime_analyzer.py  test_repo_scanner.py  test_risk_mapper.py  test_runner.py  test_spore_loader.py  test_verification.py  test_verifier.py
