[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycopatch"
version = "0.4.0"
description = "An offline immune system for codebases: scans, probes, verifies, and remembers reproducible risks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MycoPatch Contributors" }
]
keywords = ["testing", "pytest", "node-test", "javascript", "typescript", "cli", "agents", "static-analysis", "regression-tests"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: JavaScript",
  "Programming Language :: TypeScript",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
myco = "mycopatch.cli:app"

[tool.setuptools.packages.find]
include = ["mycopatch*"]

[tool.setuptools.package-data]
mycopatch = ["spores/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "mycopatch_probe: generated MycoPatch probe tests",
]
