[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycopatch"
version = "0.6.1"
description = "An offline immune system for codebases: scans, probes, verifies, and remembers reproducible risks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "MycoPatch Contributors" }
]
keywords = ["testing", "pytest", "node-test", "javascript", "typescript", "go", "rust", "java", "dotnet", "ruby", "php", "cli", "agents", "static-analysis", "regression-tests"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: JavaScript",
  "Programming Language :: TypeScript",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/kwakhyun/myco-patch"
Repository = "https://github.com/kwakhyun/myco-patch"
Issues = "https://github.com/kwakhyun/myco-patch/issues"

[project.scripts]
myco = "mycopatch.cli:app"

[tool.setuptools.packages.find]
include = ["mycopatch*"]

[tool.setuptools.package-data]
mycopatch = ["spores/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "mycopatch_probe: generated MycoPatch probe tests",
]
